fix many small bugs from findBugs